<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <!--头像-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:theme="@style/WhiteToolbarStyle"></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line"
        android:padding="8dp">

        <EditText
            android:id="@+id/old_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@null"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line"
        android:padding="8dp">

        <EditText
            android:id="@+id/new_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@null"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/head_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_line"
        android:padding="8dp">

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/font_large" />
    </LinearLayout>

    <Button
        android:id="@+id/finish_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/bt_bg"
        android:text="完成"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large" />

</LinearLayout>


